--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "@vueuse/core": "^10.9.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
