--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@vueuse/core": "^10.9.0",
+    "@vueuse/motion": "^2.1.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
