--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
+    "@sentry/vite-plugin": "^2.18.0",
+    "@sentry/vue": "^8.8.0",
     "@vueuse/core": "^10.9.0",
     "@vueuse/motion": "^2.1.0",
     "vue": "^3.4.15",
